--- a/plugin.yml
+++ b/plugin.yml
@@ -2,8 +2,8 @@
 name: EnderLevels
 author: CaptainDuck
 main: captainduck\EnderLevels\Main
-version: 1.0.0
-api: [3.0.0-ALPHA10, 3.0.0-ALPHA11, 3.0.0-ALPHA12]
+version: 1.0
+api: 3.0.3
 commands:
  stats:
   description: Shows your current stats!
